--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "yarn && cross-env NODE_ENV=development nodemon --tls-min-v1.0 app.js --mode=development --port=3000",
-    "start": "yarn && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_ENV=production nodemon --tls-min-v1.0 app.js --mode=production --port=3000",
+    "dev": "yarn && cross-env NODE_ENV=development nodemon app.js --mode=development --port=7200",
+    "start": "yarn && cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_ENV=production nodemon app.js --mode=production --port=7200",
     "doc": "apidoc -i ./middleware/ -i ./routes/ -o ./docs"
   },
   "repository": {
